--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,23 @@
+# Django Framework
 Django==5.2.7
 djangorestframework==3.15.2
-django-cors-headers==4.5.0
-python-decouple==3.8
+
+# Database
 psycopg2-binary==2.9.10
+dj-database-url==2.2.0
+
+# CORS handling
+django-cors-headers==4.5.0
+
+# Environment variables
+python-decouple==3.8
+
+# Testing (optional but recommended)
+pytest==8.3.3
+pytest-django==4.9.0
+coverage==7.6.4
+
+# Code quality (optional but recommended)
+black==24.10.0
+flake8==7.1.1
+isort==5.13.2
