--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,6 +2,6 @@
 # Get DATABASE_URL from Neon dashboard
 # Generate SECRET_KEY: python -c 'from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())'
 
-DATABASE_URL=postgresql://neondb_owner:npg_2vriETp7Xjyn@ep-rapid-recipe-a1t0q9pz-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
-SECRET_KEY=django-insecure-tibf*_343&4b2js8rj9x%(t!gm)%j8d4uqc(--pk^x8vh4q9d*
+DATABASE_URL=postgresql://user:password@host.neon.tech/database?sslmode=require
+SECRET_KEY=<"your secret key here">
 DEBUG=True
