Update SECRET_KEY format in .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,5 +3,5 @@
 # Generate SECRET_KEY: python -c 'from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())'
 
 DATABASE_URL=postgresql://user:password@host.neon.tech/database?sslmode=require
-SECRET_KEY=<"your secret key here">
+SECRET_KEY=your-secret-key-here
 DEBUG=True
