--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,93 @@
 
 # VS Code
 .vscode/.env
+
+# ============================================
+# Python
+# ============================================
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual Environments
+venv/
+ENV/
+env/
+.venv
+
+# Django
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+media/
+staticfiles/
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+*.env
+
+# ============================================
+# Node / Frontend
+# ============================================
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Build outputs
+dist/
+dist-ssr/
+*.local
+
+# Editor directories and files
+.idea/
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# ============================================
+# Database & Sensitive Data
+# ============================================
+*.db
+*.sqlite
+*.sqlite3
+dump.rdb
+*.dump
+
+# Backup files
+*.bak
+*.backup
+*.old
+*.orig
+
+# ============================================
+# OS
+# ============================================
+.DS_Store
+Thumbs.db
