--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,8 +31,9 @@ repos:
     rev: 1.7.10
     hooks:
       - id: bandit
-        args: ['-c', 'pyproject.toml']
+        args: ['-c', 'backend/pyproject.toml']
         files: ^backend/
+        exclude: ^backend/(tests|migrations)/
 
   # General file checks
   - repo: https://github.com/pre-commit/pre-commit-hooks
