--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "flowbite-react": "^0.12.9",
     "flowbite-react-icons": "^1.3.1",
     "lucide-react": "^0.545.0",
+    "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
