--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,11 @@
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.12.10",
     "flowbite-react-icons": "^1.3.1",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.545.0",
     "prop-types": "^15.8.1",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
