feat: Set up Docker deployment with entrypoint script, environment configurations, and updated .env examples

--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,8 @@ dump.rdb
 # ============================================
 .DS_Store
 Thumbs.db
+
+# ============================================
+# Plan
+# ============================================
+.plan
