--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,6 +4,21 @@ DATABASE_URL=postgresql://your_db_user:your_db_password@your_db_host/your_db_nam
 # Django Settings
 SECRET_KEY=your-secret-key-here-generate-with-django
 DEBUG=True
+ALLOWED_HOSTS=localhost,127.0.0.1
+
+# CORS & CSRF
+CORS_ALLOWED_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
+CORS_ALLOW_CREDENTIALS=True
+CSRF_TRUSTED_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
+
+# Security Flags (override to True in production)
+SECURE_SSL_REDIRECT=False
+SESSION_COOKIE_SECURE=False
+CSRF_COOKIE_SECURE=False
+SECURE_HSTS_SECONDS=0
+SECURE_HSTS_INCLUDE_SUBDOMAINS=False
+SECURE_HSTS_PRELOAD=False
+SECURE_REFERRER_POLICY=same-origin
 
 # Email Configuration
 EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
