--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,8 +16,9 @@ psycopg2-binary==2.9.10
 pycparser==2.23
 PyJWT==2.10.1
 python-decouple==3.8
+whitenoise==6.7.0
 requests==2.32.5
-reportlab==4.2.5 
+reportlab==4.2.5
 setuptools==80.9.0
 sqlparse==0.5.3
 typing_extensions==4.15.0
