--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,13 +10,11 @@ services:
     env_file:
       - backend/.env
     environment:
-      # Ensure Django binds to 0.0.0.0 and uses correct port
       - DJANGO_SETTINGS_MODULE=sbcc.settings
     volumes:
       - ./backend:/app
     ports:
       - "8000:8000"
-    depends_on: []
 
   frontend:
     build:
@@ -25,7 +23,7 @@ services:
       target: dev
     container_name: sbcc-frontend
     environment:
-      - VITE_API_BASE_URL=http://backend:8000/api
+      - VITE_API_URL=http://localhost:8000/api
     volumes:
       - ./frontend:/app
       - /app/node_modules
