chore: add flake8 configuration and update requirements files for production dependencies

--- a/backend/requirements-dev.txt
+++ b/backend/requirements-dev.txt
@@ -1,6 +1,9 @@
 # Development and code quality tools
 # Install with: pip install -r requirements-dev.txt
 
+# Include production deps
+-r requirements.txt
+
 # Code formatting
 black==24.10.0
 isort==5.13.2
