--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,8 @@ services:
     name: sbcc-backend
     runtime: docker
     dockerfilePath: ./backend/Dockerfile
-    dockerContext: .
-    dockerTarget: prod
-    region: singapore  # or oregon, frankfurt, ohio
+    dockerContext: ./backend
+    region: sin
     plan: free
     healthCheckPath: /api/health/
     envVars:
@@ -16,9 +15,9 @@ services:
       - key: DEBUG
         value: "False"
       - key: SECRET_KEY
-        sync: false  # Set manually in dashboard
+        sync: false
       - key: DATABASE_URL
-        sync: false  # Set manually in dashboard
+        sync: false
       - key: ALLOWED_HOSTS
         sync: false
       - key: CORS_ALLOWED_ORIGINS
