--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     runtime: docker
     dockerfilePath: ./backend/Dockerfile
     dockerContext: ./backend
-    region: sin
+    region: singapore
     plan: free
     healthCheckPath: /api/health/
     envVars:
