--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -37,6 +37,7 @@ django-cors-headers==4.5.0
 django-filter==24.3
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.5.1
+gunicorn==23.0.0
 idna==3.11
 psycopg2-binary==2.9.10
 pycparser==2.23
