fix: add missing dockerTarget configuration in render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,7 @@ services:
     runtime: docker
     dockerfilePath: ./backend/Dockerfile
     dockerContext: .
+    dockerTarget: prod
     region: singapore
     plan: free
     healthCheckPath: /api/health/
