--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,8 @@
 [phases.setup]
-nixPkgs = ["python312", "postgresql"]
+nixPkgs = ["python312", "python312Packages.pip", "postgresql"]
 
 [phases.install]
-cmds = ["cd backend && pip install -r requirements.txt && pip install gunicorn"]
+cmds = ["cd backend && python3 -m pip install -r requirements.txt"]
 
 [start]
-cmd = "cd backend && python manage.py migrate --noinput && python manage.py collectstatic --noinput && gunicorn sbcc.wsgi:application --bind 0.0.0.0:$PORT"
+cmd = "cd backend && python3 manage.py migrate --noinput && python3 manage.py collectstatic --noinput && gunicorn sbcc.wsgi:application --bind 0.0.0.0:$PORT"
