--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
+    "recharts": "^3.5.1",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
