--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -2,12 +2,12 @@ name: Backend CI
 
 on:
   push:
-    branches: [main, dev]
+    branches: [main]
     paths:
       - "backend/**"
       - ".github/workflows/backend-ci.yml"
   pull_request:
-    branches: [main, dev]
+    branches: [main]
     paths:
       - "backend/**"
       - ".github/workflows/backend-ci.yml"
@@ -95,5 +95,12 @@ jobs:
       - name: Run migrations check
         run: python manage.py makemigrations --check --dry-run
 
-      - name: Run tests with pytest
-        run: pytest --tb=short -q
+      - name: Run tests with pytest and coverage
+        run: pytest --cov=apps --cov-report=xml --cov-report=term-missing --tb=short
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          files: ./coverage.xml
+          fail_ci_if_error: false
+          verbose: true
