feat: Add conditional Brevo SMTP email configuration with fallback to Gmail and update .env.example.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -36,3 +36,8 @@ EMAIL_HOST_PASSWORD=your-app-password-here
 
 # From email address
 DEFAULT_FROM_EMAIL=SBCC Management <your-email@gmail.com>
+
+# Brevo (Sendinblue) SMTP for production
+# Sign up at https://brevo.com and get SMTP credentials from Settings > SMTP & API
+BREVO_API_KEY=
+BREVO_SMTP_USER=
