--- a/backend/.env.example
+++ b/backend/.env.example
@@ -37,7 +37,7 @@ EMAIL_HOST_PASSWORD=your-app-password-here
 # From email address
 DEFAULT_FROM_EMAIL=SBCC Management <your-email@gmail.com>
 
-# Brevo (Sendinblue) SMTP for production
-# Sign up at https://brevo.com and get SMTP credentials from Settings > SMTP & API
+# Brevo (Sendinblue) HTTP API for production
+# Sign up at https://brevo.com and get API key from Settings > SMTP & API
+# Verify your Gmail address as a sender in Brevo before sending
 BREVO_API_KEY=
-BREVO_SMTP_USER=
