--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,6 +11,9 @@ CORS_ALLOWED_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
 CORS_ALLOW_CREDENTIALS=True
 CSRF_TRUSTED_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
 
+# Frontend URL (used in password reset emails)
+FRONTEND_URL=http://localhost:5173
+
 # Security Flags (override to True in production)
 SECURE_SSL_REDIRECT=False
 SESSION_COOKIE_SECURE=False
