--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
+    "@react-pdf/renderer": "^4.3.1",
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.12.10",
     "flowbite-react-icons": "^1.3.1",
