chore(deps): add qrcode for PDF sticker labels

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.545.0",
     "prop-types": "^15.8.1",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
