--- a/backend/.env.example
+++ b/backend/.env.example
@@ -44,3 +44,15 @@ DEFAULT_FROM_EMAIL=SBCC Management <your-email@gmail.com>
 # Sign up at https://brevo.com and get API key from Settings > SMTP & API
 # Verify your Gmail address as a sender in Brevo before sending
 BREVO_API_KEY=
+
+# ========== Cloudflare R2 Storage (Production) ==========
+# Set USE_R2_STORAGE=true in production to store files in cloud storage
+# Without this, files are saved locally and LOST on redeploy (ephemeral disks)
+
+USE_R2_STORAGE=false
+R2_ACCOUNT_ID=your-cloudflare-account-id
+R2_ACCESS_KEY_ID=your-r2-api-token-access-key
+R2_SECRET_ACCESS_KEY=your-r2-api-token-secret
+R2_BUCKET_NAME=sbcc-files
+# Public URL from R2 dashboard (after enabling public access on bucket)
+R2_PUBLIC_URL=https://pub-XXXXX.r2.dev
