--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -13,49 +13,8 @@ on:
       - ".github/workflows/backend-ci.yml"
 
 jobs:
-  lint:
-    name: Lint & Format
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: backend
-
-    steps:
-      - uses: actions/checkout@v6
-
-      - name: Set up Python 3.12
-        uses: actions/setup-python@v6
-        with:
-          python-version: "3.12"
-
-      - name: Cache pip
-        uses: actions/cache@v5
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('backend/requirements*.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r requirements-dev.txt
-
-      - name: Check formatting with Black
-        run: black --check --diff .
-
-      - name: Check import order with isort
-        run: isort --check-only --diff .
-
-      - name: Lint with flake8
-        run: flake8 .
-
-      - name: Security check with Bandit
-        run: bandit -c pyproject.toml -r . --exit-zero
-
-  test:
-    name: Django Tests
+  ci:
+    name: Lint, Test & Coverage
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -89,13 +48,28 @@ jobs:
           pip install -r requirements.txt
           pip install -r requirements-dev.txt
 
+      # Lint checks - fast fail
+      - name: Check formatting with Black
+        run: black --check --diff .
+
+      - name: Check import order with isort
+        run: isort --check-only --diff .
+
+      - name: Lint with flake8
+        run: flake8 .
+
+      - name: Security check with Bandit
+        run: bandit -c pyproject.toml -r . --exit-zero
+
+      # Django checks
       - name: Run Django system check
         run: python manage.py check
 
       - name: Run migrations check
         run: python manage.py makemigrations --check --dry-run
 
-      - name: Run tests with pytest and coverage
+      # Tests with coverage
+      - name: Run tests with pytest
         run: pytest --cov=apps --cov-report=xml --cov-report=term-missing --tb=short
 
       - name: Upload coverage to Codecov
