chore: change default email on configurations

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -43,7 +43,7 @@ DEFAULT_FROM_EMAIL=SBCC Management <your-email@gmail.com>
 # Brevo (Sendinblue) HTTP API for production
 # Sign up at https://brevo.com and get API key from Settings > SMTP & API
 # Verify your Gmail address as a sender in Brevo before sending
-BREVO_API_KEY=
+BREVO_API_KEY=your-brevo-api-key-here
 
 # ========== Cloudflare R2 Storage (Production) ==========
 # Set USE_R2_STORAGE=true in production to store files in cloud storage
