chore: Remove Model Context Protocol (MCP) server implementation and update gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
-# MCP Configuration
-.mcp/.env
-.mcp/node_modules/
-.mcp/package-lock.json
+# AI Agent Configuration
+.agent/
 
 # VS Code
 .vscode/.env
