feat: Attendace Sheet Date Filtering Function

--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,9 @@ Thumbs.db
 # Plan
 # ============================================
 .plan
+
+# ============================================
+# Local Certificates (keep untracked)
+# ============================================
+backend/cert.crt
+backend/cert.key
